# estudos

./: README.md  databricks_file_system.py  databricks_sql.sql  databricks_sql_spark.py  db-tratamento-dados.py  python_basics.py
projeto_django/: pyproject.toml
projeto_streamlit/: pyproject.toml
