[project]
name = "projeto-streamlit"
version = "0.1.0"
description = ""
authors = [
    {name = "Nicolas Santos",email = "nicolasoliveira.santos@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
